added skill content

--- a/index.html
+++ b/index.html
@@ -58,6 +58,40 @@
            </div>
         </div>
         </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="/images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilala javascript</p>
+                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil eos iste ducimus delectus nobis cupiditate.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/react.png" alt="">
+                    <p class="skill-title">react</p>
+                    <p class="skill-description">Sit eveniet omnis nesciunt tempore libero eius soluta impedit, commodi facilis consectetur autem sapiente officiis.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Note JS</p>
+                    <p class="skill-description">Veritatis dolorem cum labore tempore dolore doloremque qui illum at iure voluptate! Nesciunt, tempore libero.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongodb</p>
+                    <p class="skill-description">Commodi veniam illum vitae. Id quibusdam inventore ut expedita cum saepe nobis magni ex animi.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Resume Section -->
+        <section class="resume">
+            <h3 class="section-title">A Sammary of my Resume</h3>
+            <div class="resume-content">
+                <div></div>
+            </div>
+        </section>
     </main>
     <footer>
 
