--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     Morning because as to society behaved moments.</p>
                 <button class="btn-primary">download CV</button>
             </div>
-            <img src="/images/hardy.png" alt="">
+            <img src="../MH-portfolio/images/hardy.png" alt="">
         </div>
 
     </header>
