--- a/index.html
+++ b/index.html
@@ -67,25 +67,25 @@
             <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
             <div class="skills-container">
                 <div class="skill">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="../MH-portfolio/images/icons/js.png" alt="">
                     <p class="skill-title">Vanilala javascript</p>
                     <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil eos
                         iste ducimus delectus nobis cupiditate.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/react.png" alt="">
+                    <img src="../MH-portfolio/images/icons/react.png" alt="">
                     <p class="skill-title">react</p>
                     <p class="skill-description">Sit eveniet omnis nesciunt tempore libero eius soluta impedit, commodi
                         facilis consectetur autem sapiente officiis.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/nodejs.png" alt="">
+                    <img src="../MH-portfolio/images/icons/nodejs.png" alt="">
                     <p class="skill-title">Note JS</p>
                     <p class="skill-description">Veritatis dolorem cum labore tempore dolore doloremque qui illum at
                         iure voluptate! Nesciunt, tempore libero.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/mongo.png" alt="">
+                    <img src="../MH-portfolio/images/icons/mongo.png" alt="">
                     <p class="skill-title">Mongodb</p>
                     <p class="skill-description">Commodi veniam illum vitae. Id quibusdam inventore ut expedita cum
                         saepe nobis magni ex animi.</p>
@@ -166,13 +166,13 @@
                     Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
                 </p>
                 <a href="">
-                    <img src="/images/icons/facebook.png" alt="">
+                    <img src="../MH-portfolio/images/icons/facebook.png" alt="">
                 </a>
                 <a href="">
-                    <img src="/images/icons/insta.png" alt="">
+                    <img src="../MH-portfolio/images/icons/insta.png" alt="">
                 </a>
                 <a href="">
-                    <img src="/images/icons/twitter.png" alt="">
+                    <img src="../MH-portfolio/images/icons/twitter.png" alt="">
                 </a>
             </div>
             <div>
